src/objects/SomDig_AntizipationsVS__c.object
<CustomObject>
    <description>Verteilungsschlüssel bei Rotation, wird benutzt bei Antizipation bei Hochrechnung.</description>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlVerteilungsschluessel__c</fullName>
        <label>Anzahl der Verteilungsschlüssel</label>
        <summaryForeignKey>SomDig_Verteilungsschluessel__c.SomDig_AntizipationsVS__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_SummeProzentsaetze__c</fullName>
        <label>Summe der Prozentsätze</label>
        <summarizedField>SomDig_Verteilungsschluessel__c.SomDig_Prozentsatz__c</summarizedField>
        <summaryForeignKey>SomDig_Verteilungsschluessel__c.SomDig_AntizipationsVS__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_VerteilungGueltig__c</fullName>
        <description>Zeigt an ob die Summe der Prozentsätze von allen Verteilungsschlüssel 100% ist.</description>
        <formula>IMAGE(IF(OR(ISBLANK(SomDig_AnzahlVerteilungsschluessel__c), SomDig_AnzahlVerteilungsschluessel__c=0),
         &quot;/img/samples/flag_yellow.gif&quot;,
         IF(OR(ISBLANK(SomDig_SummeProzentsaetze__c), SomDig_SummeProzentsaetze__c!=1.00),
            &quot;/img/samples/flag_red.gif&quot;,
            &quot;/img/samples/flag_green.gif&quot;)), 
      &quot;Gültigkeit Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt an ob die Summe der Prozentsätze von allen Verteilungsschlüssel 100% ist.</inlineHelpText>
        <label>Verteilung Gültig</label>
        <type>Text</type>
    </fields>
    <label>Antizipationsverteilungsschlüssel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SomDig_AnzahlVerteilungsschluessel__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Antizipationsverteilungsschlüssel-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Antizipationsverteilungsschlüssel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>